# seqr-query-backend

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: deploy.yaml
client/: Makefile  client_cli.py  example_query.textproto  requirements.txt  seqr_query_service_pb2.py  seqr_query_service_pb2_grpc.py
pipeline/: README.md  main.py  mt_to_parquet.py  parquet_to_arrow.py
proto/: CMakeLists.txt  seqr_query_service.proto
server/: CMakeLists.txt  gtest_main_with_flags.cc  main.cc  server.cc  server.h  server_test.cc  string_list_contains_any.cc  string_list_contains_any.h  string_list_contains_any_test.cc  url_reader.cc  url_reader.h
server/testdata/: na12878_trio_query.textproto  part-00000-na12878-trio.zstd.arrow  part-00001-na12878-trio.zstd.arrow  part-00002-na12878-trio.zstd.arrow
translator/: es_to_protobuff.py  es_to_protobuff_test.py  es_to_sql.py  more-complex-query.json  query_na12878.json
